kube_deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    run: flask-app
  ports:
  - nodePort: 30359
    port: 5000
    protocol: TCP
    targetPort: 5000
  sessionAffinity: None
